Fix code style issues and update linting configuration
- Add noqa comments for intentional imports in __init__.py
- Remove duplicate draw function definition in base.py
- Remove unused 'os' import from draw.py
- Replace lambda assignment with proper function definition in draw.py
- Fix unused exception variables in hypergraph.py
- Fix comparison operators (== None/True/False) in test files
- Add .flake8 configuration file with max-line-length = 119
- Update isort configuration to use correct parameter name (line_length)
- Format all files with black and isort

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
       uses: astral-sh/setup-uv@v5
       with:
         version: "latest"
+        enable-cache: true
     
     - name: Set up Python ${{ matrix.python-version }}
       run: uv python install ${{ matrix.python-version }}
@@ -65,6 +66,7 @@ jobs:
       uses: astral-sh/setup-uv@v5
       with:
         version: "latest"
+        enable-cache: true
     
     - name: Set up Python
       run: uv python install 3.11
