--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,6 +36,7 @@ jobs:
       uses: astral-sh/setup-uv@v5
       with:
         version: "latest"
+        enable-cache: true
     
     - name: Set up Python
       run: uv python install 3.11
