--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,3 +79,7 @@ line-length = 119
 profile = "black"
 line_length = 119
 
+[tool.flake8]
+max-line-length = 119
+extend-ignore = ["E203", "W503"]
+
