--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "hypergraph-db"
-version = "0.3.0"
+version = "0.4.0-dev"
 description = "A Lightweight Hypergraph Database with hypergraph visualization."
 authors = [
     {name = "Yifan Feng", email = "evanfeng97@qq.com"}
